--- a/Cuotas vs Contado vs Mixto.ipynb
+++ b/Cuotas vs Contado vs Mixto.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "590535ab",
+   "id": "b81383b4",
    "metadata": {},
    "source": [
     "# Cuotas vs Contado vs Mixto\n",
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ea7ed710",
+   "id": "fce5a125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8b492ef",
+   "id": "7db255e7",
    "metadata": {},
    "source": [
     "## Funciones de calculo de tazas y rendimientos contable"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "42e5ddde",
+   "id": "2abca8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "00cbaf76",
+   "id": "ebfb9b93",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3940ed21",
+   "id": "cca2760a",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "38bcd9b3",
+   "id": "f061c136",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ed50d3",
+   "id": "f7f3ee49",
    "metadata": {},
    "source": [
     "## Inicializar valores en los siguientes"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "80f0ab14",
+   "id": "8e3ad17f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4a2c5c",
+   "id": "d53d9644",
    "metadata": {},
    "source": [
     "## El calculo en si"
@@ -182,8 +182,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "382aafc0",
+   "execution_count": 92,
+   "id": "b8c10e17",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "      <td>05/11/2022</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>334</td>\n",
-       "      <td>15178.571616</td>\n",
+       "      <td>15178.57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -229,7 +229,7 @@
        "      <td>05/12/2022</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>304</td>\n",
-       "      <td>13366.176113</td>\n",
+       "      <td>13366.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -237,7 +237,7 @@
        "      <td>05/01/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>273</td>\n",
-       "      <td>11603.807592</td>\n",
+       "      <td>11603.81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -245,7 +245,7 @@
        "      <td>05/02/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>242</td>\n",
-       "      <td>9947.035197</td>\n",
+       "      <td>9947.04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -253,7 +253,7 @@
        "      <td>05/03/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>214</td>\n",
-       "      <td>8536.087223</td>\n",
+       "      <td>8536.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -261,7 +261,7 @@
        "      <td>05/04/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>183</td>\n",
-       "      <td>7063.123937</td>\n",
+       "      <td>7063.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -269,7 +269,7 @@
        "      <td>05/05/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>153</td>\n",
-       "      <td>5721.761855</td>\n",
+       "      <td>5721.76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -277,7 +277,7 @@
        "      <td>05/06/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>122</td>\n",
-       "      <td>4417.424968</td>\n",
+       "      <td>4417.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -285,7 +285,7 @@
        "      <td>05/07/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>92</td>\n",
-       "      <td>3229.623440</td>\n",
+       "      <td>3229.62</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -293,7 +293,7 @@
        "      <td>05/08/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>61</td>\n",
-       "      <td>2074.608423</td>\n",
+       "      <td>2074.61</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -301,7 +301,7 @@
        "      <td>05/09/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>30</td>\n",
-       "      <td>988.798632</td>\n",
+       "      <td>988.80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -309,29 +309,29 @@
        "      <td>05/10/2023</td>\n",
        "      <td>16047.24</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    id       Fecha     Cuota  Días PF   Rendimiento\n",
-       "0    1  05/11/2022  16047.24      334  15178.571616\n",
-       "1    2  05/12/2022  16047.24      304  13366.176113\n",
-       "2    3  05/01/2023  16047.24      273  11603.807592\n",
-       "3    4  05/02/2023  16047.24      242   9947.035197\n",
-       "4    5  05/03/2023  16047.24      214   8536.087223\n",
-       "5    6  05/04/2023  16047.24      183   7063.123937\n",
-       "6    7  05/05/2023  16047.24      153   5721.761855\n",
-       "7    8  05/06/2023  16047.24      122   4417.424968\n",
-       "8    9  05/07/2023  16047.24       92   3229.623440\n",
-       "9   10  05/08/2023  16047.24       61   2074.608423\n",
-       "10  11  05/09/2023  16047.24       30    988.798632\n",
-       "11  12  05/10/2023  16047.24        0      0.000000"
+       "    id       Fecha     Cuota  Días PF  Rendimiento\n",
+       "0    1  05/11/2022  16047.24      334     15178.57\n",
+       "1    2  05/12/2022  16047.24      304     13366.18\n",
+       "2    3  05/01/2023  16047.24      273     11603.81\n",
+       "3    4  05/02/2023  16047.24      242      9947.04\n",
+       "4    5  05/03/2023  16047.24      214      8536.09\n",
+       "5    6  05/04/2023  16047.24      183      7063.12\n",
+       "6    7  05/05/2023  16047.24      153      5721.76\n",
+       "7    8  05/06/2023  16047.24      122      4417.42\n",
+       "8    9  05/07/2023  16047.24       92      3229.62\n",
+       "9   10  05/08/2023  16047.24       61      2074.61\n",
+       "10  11  05/09/2023  16047.24       30       988.80\n",
+       "11  12  05/10/2023  16047.24        0         0.00"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
     "        cuota,\n",
     "        #pagos_acumulado,\n",
     "        delta_dias,\n",
-    "        rendimiento\n",
+    "        round(rendimiento, 2)\n",
     "    ))\n",
     "    proxima_cuota += relativedelta(months=1) \n",
     "df = pd.DataFrame(data, columns=[\"id\", \"Fecha\", \"Cuota\", \"Días PF\", \"Rendimiento\"])\n",
@@ -363,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "bce2f0ff",
+   "execution_count": 93,
+   "id": "a2ea0f5e",
    "metadata": {},
    "outputs": [
     {
@@ -400,9 +400,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce0931af",
+   "metadata": {},
+   "source": [
+    "## Como proceder\n",
+    "\n",
+    "Para aprobechar la diferencia se tendrian que crear n-1 plazo fijos iguales por el valor de la cuota a diferentes días (vea la tabla de mas abajo)\n",
+    "\n",
+    "> n: cantidad de cuotas "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "a9b44bb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cuota</th>\n",
+       "      <th>Días PF</th>\n",
+       "      <th>Rendimiento</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>334</td>\n",
+       "      <td>15178.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>304</td>\n",
+       "      <td>13366.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>273</td>\n",
+       "      <td>11603.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>242</td>\n",
+       "      <td>9947.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>214</td>\n",
+       "      <td>8536.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>183</td>\n",
+       "      <td>7063.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>153</td>\n",
+       "      <td>5721.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>122</td>\n",
+       "      <td>4417.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>92</td>\n",
+       "      <td>3229.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2074.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>30</td>\n",
+       "      <td>988.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>16047.24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Cuota  Días PF  Rendimiento\n",
+       "0   16047.24      334     15178.57\n",
+       "1   16047.24      304     13366.18\n",
+       "2   16047.24      273     11603.81\n",
+       "3   16047.24      242      9947.04\n",
+       "4   16047.24      214      8536.09\n",
+       "5   16047.24      183      7063.12\n",
+       "6   16047.24      153      5721.76\n",
+       "7   16047.24      122      4417.42\n",
+       "8   16047.24       92      3229.62\n",
+       "9   16047.24       61      2074.61\n",
+       "10  16047.24       30       988.80\n",
+       "11  16047.24        0         0.00"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"Cuota\", \"Días PF\", \"Rendimiento\"]]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf8f3fd3",
+   "id": "f74edb4e",
    "metadata": {},
    "outputs": [],
    "source": []
